Copy Vercel's twitter cards

--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <html>
-  <head>
-    <style>
-      img {
-        max-height: 50vh;
-      }
 
-      button {
-        display: block;
-      }
+<head>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@vercel" />
+  <meta name="twitter-title" content="twitter name" />
+  <meta name="twitter-description" content="twitter description" />
+  <meta name="twitter:image" content="https://assets.vercel.com/image/upload/front/vercel/dps.png" />
+  <meta name="og:title" content="Develop. Preview. Ship. For the best frontend teams – Vercel" />
+  <meta name="og:url" content="https://vercel.com/" />
+  <meta name="og:description"
+    content="Deploy web projects with the best frontend developer experience and highest end-user performance." />
+  <meta name="og:image "content=" https://assets.vercel.com/image/upload/front/vercel/dps.png" />
+  <style>
+    img {
+      max-height: 50vh;
+    }
 
-      audio {
-        visibility: hidden;
-      }
+    button {
+      display: block;
+    }
 
-    </style>
-  </head>
-  <body>
-    <img src="./just-do-it-image.jpg">
-    <button id="control-button">Start</button>
-    <button id="control-button-stop">Stop</button>
-    <audio controls>
-      <source src="./just-do-it_trimmed.mp3">
-    </audio>
-    <script src="index.js"></script>
-  </body>
+    audio {
+      visibility: hidden;
+    }
+  </style>
+</head>
+
+<body>
+  <img src="./just-do-it-image.jpg">
+  <button id="control-button">Start</button>
+  <button id="control-button-stop">Stop</button>
+  <audio controls>
+    <source src="./just-do-it_trimmed.mp3">
+  </audio>
+  <script src="index.js"></script>
+</body>
+
 </html>
