Copy Vercel's og and twitter data

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
 
 <head>
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@vercel" />
-  <meta name="twitter-title" content="twitter name" />
-  <meta name="twitter-description" content="twitter description" />
-  <meta name="twitter:image" content="https://assets.vercel.com/image/upload/front/vercel/dps.png" />
-  <meta name="og:title" content="Develop. Preview. Ship. For the best frontend teams – Vercel" />
-  <meta name="og:url" content="https://vercel.com/" />
-  <meta name="og:description"
-    content="Deploy web projects with the best frontend developer experience and highest end-user performance." />
-  <meta name="og:image "content=" https://assets.vercel.com/image/upload/front/vercel/dps.png" />
+  <meta content="summary_large_image" name="twitter:card">
+  <meta content="@vercel" name="twitter:site">
+  <meta content="https://assets.vercel.com/image/upload/front/vercel/dps.png" name="twitter:image">
+  <meta content="Develop. Preview. Ship. For the best frontend teams – Vercel" property="og:title">
+  <meta content="https://vercel.com/" property="og:url">
+  <meta content="Deploy web projects with the best frontend developer experience and highest end-user performance."
+    name="description">
+  <meta content="Deploy web projects with the best frontend developer experience and highest end-user performance."
+    property="og:description">
+  <meta content="https://assets.vercel.com/image/upload/front/vercel/dps.png" property="og:image">
   <style>
     img {
       max-height: 50vh;
